--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.9",
+    "jose": "^5.9.6",
+    "js-cookie": "^3.0.5",
     "node": "^23.5.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
